@@ -1,0 +1,24 @@
+module: gaphor
+==============
+
+This is the main module for Gaphor.
+
+Submodules:
+
+  event.py - top level events, emited through zope.component
+  i18n.py - internationalization. The '_' function.
+  interfaces.py - top level interfaces
+  plugin.py - entrypoint for plugins (import gaphor.plugin from your plugin)
+  pluginmanager.py - Loads plugins
+  storage.py, parser.py - Load / save models.
+  undomanager.py - handle undo / redo functionality
+  version.py - version information
+
+Packages:
+
+  UML - The data model (UML 2.1 meta-model)
+  diagram - presentation elements ("items"). This is what's actually drawn.
+  ui - GUI code (GTK+)
+  misc - utility and support modules
+
+
