@@ -54,8 +54,8 @@ class ActorItem(ClassifierItem):
         y = (head / 2) * fy
         cy = head * fy
 
-        c.move_to(x + head / 2.0, y)
-        c.arc(x, y, head / 2.0, 0, 2*pi)
+        c.move_to(x + head * fy / 2.0, y)
+        c.arc(x, y, head * fy / 2.0, 0, 2*pi)
         #c.stroke()
 
         c.move_to(x, y + cy / 2)
