@@ -1,3 +1,7 @@
+2006-08-21  arjan <arjan at yirdis dot nl>
+
+        * gaphor/diagram/usecase.py: drawing works
+
 2006-07-27  arjan <arjan at yirdis dot nl>
 
         * Connect/disconnect works for comment-commentline
